# photo-trip-timeline

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  i18n-check.yml
assets/: demo.tape
src/phototrips/: __init__.py  assign.py  cli.py  config.py  dedupe.py  demo.py  draft.py  extract.py  geo.py  home.py  i18n.py  model.py  naming.py  pipeline.py  places.py  render_json.py  render_markdown.py  represent.py  segment.py
styles/: default.md
tests/: test_assign.py  test_demo.py  test_draft.py  test_home.py  test_i18n.py  test_naming.py  test_places.py  test_segment.py  test_timezone.py
tests/fixtures/: __init__.py
